# MewVault

./: .gitattributes  .gitignore  .mcp.json  .mewwiki  CLAUDE.md  INSTALL.md  Project_Status.md  README.md  bootstrap.sh  log.md  mew.py  pyproject.toml
.claude/: last-session-message.txt  limits.json  settings.local.json
.claude/agents/: fable.md  mew-archivist.md  mew-chief.md  mew-coder.md  mew-designer.md  mew-gamedev.md  mew-ideator.md  mew-learner.md  (+2 more)
agents/: .routing-index.json
bootstrap/: settings.template.json
hooks/: agent-track.js  hooks.json  post-tool-use.js  pre-compact.js  pre-tool-use.js  session-end.js  session-start.js  unity-guard.js
mcp-configs/: chromadb.json  doobidoo.json  headroom.json  memory-mcp.json
mew/: __init__.py  cli.py  memory_store.py  utils.py  workspace.py
presentations/: PRODUCT.md  ai-workflow-presentation.html  speaker-notes.md
proxy/: com.mewvault.chromadb.plist  com.mewvault.headroom.plist  install-chromadb-daemon.sh  install-headroom-daemon.sh  litellm-config.yaml  start-headroom.ps1  start-headroom.sh  start-proxy.ps1  start-proxy.sh  uninstall-chromadb-daemon.sh  uninstall-headroom-daemon.sh
scripts/: ingest_code.py  ingest_wiki.py  snapshot.mjs  srs.py
templates/: design-CLAUDE.md  games-CLAUDE.md  root-CLAUDE.md  software-CLAUDE.md  spec.md.tmpl  wiki-CLAUDE.md
wiki/: headroom-postmortem.md  mewvault-day-in-the-life.md  mewvault-how-it-works.md  mewvault-ops-reference.md  mewvault-pitch.md  mobile-capture-setup.md  research-agentic-expansion-2026.md  subagent-model-routing.md  token-audit-2026-07-08.md  tooling-linting.md  unity-workflow-guide.md  whats-new-2026-07-08.md
(+1143 files in other folders)
