[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mewvault"
version = "0.1.0"
description = "MewVault CLI — federated AI workspace manager"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
mew = "mew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mew*"]
