[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mewvault"
version = "0.1.0"
description = "MewVault CLI — federated AI workspace manager"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
proxy = [
    "litellm[proxy]>=1.0.0",
]

[project.scripts]
mew = "mew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mew*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# E/W = pycodestyle, F = pyflakes, I = isort, N = naming, UP = pyupgrade

[tool.ruff.lint.per-file-ignores]
"venv/*" = ["ALL"]
